Adds add question endpoint
