# public/openapi.json
@@ -9,6 +9,49 @@
         "version": "v0.1.0"
     },
     "paths": {
+        "/questions": {
+            "post": {
+                "tags": [
+                    "Questions"
+                ],
+                "summary": "Adds a new question for an authenticated user",
+                "operationId": "addQuestion",
+                "requestBody": {
+                    "request": "AddQuestion",
+                    "description": "Object containing the very minimal inforamtion needded to create a question",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/AddQuestionCommand"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "400": {
+                        "description": "Missing property or errors regarding data sent."
+                    },
+                    "200": {
+                        "description": "The newlly crated question",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Question"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "OAuth2.0-Token": [
+                            "user.management"
+                        ]
+                    }
+                ]
+            }
+        },
         "/users/me": {
             "get": {
                 "tags": [
@@ -40,6 +83,23 @@
     },
     "components": {
         "schemas": {
+            "AddQuestionCommand": {
+                "title": "AddQuestionCommand",
+                "description": "AddQuestionCommand",
+                "properties": {
+                    "title": {
+                        "description": "Question title",
+                        "type": "string",
+                        "example": "What time is it?"
+                    },
+                    "body": {
+                        "description": "Question body",
+                        "type": "string",
+                        "example": "A longuer consideration on how to ask for current time."
+                    }
+                },
+                "type": "object"
+            },
             "DateTime": {
                 "properties": {
                     "date": {
@@ -57,6 +117,42 @@
                         "description": "Timezone name",
                         "type": "string",
                         "example": "Atlantic/Azores"
+                    }
+                },
+                "type": "object"
+            },
+            "Question": {
+                "title": "Question",
+                "description": "Question",
+                "properties": {
+                    "questionId": {
+                        "description": "Question identifier",
+                        "type": "string",
+                        "example": "e1026e90-9b21-4b6d-b06e-9c592f7bdb82"
+                    },
+                    "owner": {
+                        "$ref": "#/components/schemas/User"
+                    },
+                    "title": {
+                        "description": "Question title",
+                        "type": "string",
+                        "example": "What time is it?"
+                    },
+                    "body": {
+                        "description": "Question body",
+                        "type": "string",
+                        "example": "A longuer consideration on how to ask for current time."
+                    },
+                    "appliedOn": {
+                        "$ref": "#/components/schemas/DateTimeImmutable"
+                    },
+                    "open": {
+                        "description": "Question open state",
+                        "type": "boolean",
+                        "example": false
+                    },
+                    "lastEditedOn": {
+                        "$ref": "#/components/schemas/DateTimeImmutable"
                     }
                 },
                 "type": "object"
@@ -82,6 +178,24 @@
                     }
                 },
                 "type": "object"
+            },
+            "DateTimeImmutable": {
+                "title": "DateTimeImmutable",
+                "properties": {
+                    "date": {
+                        "type": "string",
+                        "example": "2019-07-07 00:00:00.000000"
+                    },
+                    "timezone_type": {
+                        "type": "int",
+                        "example": 3
+                    },
+                    "timezone": {
+                        "type": "string",
+                        "example": "UTC"
+                    }
+                },
+                "type": "object"
             }
         },
         "securitySchemes": {
@@ -97,6 +211,10 @@
         }
     },
     "tags": [
+        {
+            "name": "Questions",
+            "description": "Questrions API endpoints"
+        },
         {
             "name": "Users",
             "description": "User related endpoints"
